<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <DropDownPreference
            android:entries="@array/devices"
            android:entryValues="@array/devices"
            android:key="@string/key_device"
            android:title="@string/device" />

        <DropDownPreference
            android:defaultValue="@string/sec_30"
            android:entries="@array/duration_values"
            android:entryValues="@array/duration_values"
            android:key="@string/key_duration"
            android:title="@string/duration" />

        <DropDownPreference
            android:defaultValue="@string/default_filter"
            android:entries="@array/filter_values"
            android:entryValues="@array/filter_values"
            android:key="@string/key_mains_filter"
            android:title="@string/mains_filter" />

        <DropDownPreference
            android:defaultValue="@string/single_lead"
            android:entries="@array/leads"
            android:entryValues="@array/leads"
            android:key="@string/key_leads"
            android:title="@string/leads_configuration" />

        <SwitchPreferenceCompat
            android:key="@string/key_filter"
            android:title="Filter type" />

        <SwitchPreferenceCompat
            android:key="@string/key_lock_leads"
            android:title="Lock Leads" />

        <SwitchPreferenceCompat
            android:key="@string/key_kardia"
            android:title="Kardia AI" />

        <SwitchPreferenceCompat
            android:key="@string/key_slip_result_screen"
            android:title="Skip Result Screen" />

        <SwitchPreferenceCompat
            android:key="@string/key_about_eu_screen"
            android:title="About Screen" />

    </PreferenceCategory>
</PreferenceScreen>
